--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   font-family: sans-serif;
 }
 
@@ -47,7 +47,6 @@
   border-radius: 4px;
   padding: 5px 10px;
   text-align: left;
-  cursor: pointer;
   user-select: none;
   height: 20px;
   font-weight: 500;
@@ -61,7 +60,6 @@
   padding: 7px 10px;
   border: 1px solid lightgray;
   border-radius: 4px;
-  background-color: white;
   font-weight: 700;
   background-color: #f0f0f0;
   font-size: 13px;
@@ -92,13 +90,13 @@
 #user-info-container__username {
   font-size: 13px;
   font-style: italic;
+  font-weight: 600;
 }
 
 #user-info-container__name {
-  font-size: 32px;
   font-weight: 600;
-  margin: 2px 0px;
-  overflow: scroll;
+  font-size: 24px;
+  padding: 7px 0;
 }
 
 #user-info-container__bio {
@@ -113,7 +111,7 @@
 
 #repos-list {
   max-height: 35vh;
-  overflow: scroll;
+  overflow: auto;
 }
 
 li {
@@ -143,7 +141,20 @@ li:first-child {
 #liContent {
   display: flex;
   align-items: baseline;
-  font-size: 16px;
+  justify-content: flex-end;
+  flex: 1;
+}
+
+#liContent > *:first-child {
+  flex: inherit;
+}
+
+#liContent > *:not(:first-child) {
+  margin-left: 5px;
+}
+
+#liContent > span:not(:first-of-type) {
+  font-weight: 500;
 }
 
 #error {
